Fix layout on mobile devices

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 40px;
   justify-content: center;
   align-items: center;
 }
